# llm-cli

./: ARCHITECTURE.md  Cargo.toml  README.md  SKILL.md  install.sh
.github/workflows/: release.yml
src/: cli.rs  config.rs  main.rs  provider.rs  types.rs
